# GLRendering-Template

./: .gitignore  CMakeLists.txt  README.md  main.cpp
shaders/: shader.h
